# lfl-mmc

LaserOptimizerSuite/: .gitignore  README.md  manager.py  requirements.txt  view_gcode.py
LaserOptimizerSuite/engines/common/: flatten.py
LaserOptimizerSuite/engines/cpp_v3/: CMakeLists.txt
LaserOptimizerSuite/engines/cpp_v3/src/: main.cpp
LaserOptimizerSuite/engines/py_v1/: config.json  main.py
LaserOptimizerSuite/engines/py_v1/core/: exporter.py  upper_layer.py  visualization.py
LaserOptimizerSuite/engines/py_v2/: config.json  main.py
LaserOptimizerSuite/engines/py_v2/core/: exporter.py  lower_layer.py  svg_loader.py  upper_layer.py  visualization.py
